fix: footer spacing

--- a/src/components/Layout/Layout.module.scss
+++ b/src/components/Layout/Layout.module.scss
@@ -96,7 +96,7 @@
 }
 
 .footer {
-	margin: var(--s-7) auto;
+	margin: 60px auto;
 	width: fit-content;
 	max-width: 600px;
 	text-align: center;
