--- a/src/pages/home/index.module.scss
+++ b/src/pages/home/index.module.scss
@@ -128,10 +128,6 @@
 
 .ack {
 	margin-top: var(--s-7);
-
-	> a {
-		display: block;
-	}
 }
 
 .table {
